--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -5,8 +5,7 @@
 }
 
 window#waybar {
-  background-color: rgba(43, 48, 59, 0.5);
-  border-bottom: 3px solid rgba(100, 114, 125, 0.5);
+  background-color: rgba(0, 0, 0, 0);
   color: #ffffff;
   transition-property: background-color;
   transition-duration: .5s;
@@ -39,17 +38,17 @@ button {
   box-shadow: inset 0 -3px transparent;
   /* Avoid rounded borders under each button name */
   border: none;
-  border-radius: 0;
 }
 
 /* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
 button:hover {
   background: inherit;
-  box-shadow: inset 0 -3px #ffffff;
 }
 
 #workspaces button {
   padding: 0 5px;
+  margin: 5px 2px;
+  border-radius: 6px;
   background-color: transparent;
   color: #ffffff;
 }
@@ -59,17 +58,12 @@ button:hover {
 }
 
 #workspaces button.focused {
-  background-color: #64727D;
-  box-shadow: inset 0 -3px #ffffff;
+  background: rgba(255, 255, 255, 0.7);
+  color: #3f3f3f;
 }
 
 #workspaces button.urgent {
   background-color: #eb4d4b;
-}
-
-#mode {
-  background-color: #64727D;
-  border-bottom: 3px solid #ffffff;
 }
 
 #clock,
@@ -80,9 +74,13 @@ button:hover {
 #wireplumber,
 #tray,
 #mode,
+#language,
 #scratchpad {
-  padding: 0 10px;
-  color: #ffffff;
+  padding: 5px 10px;
+  margin: 5px 3px;
+  background: rgba(255, 255, 255, 0.7);
+  color: #3f3f3f;
+  border-radius: 6px;
 }
 
 #window,
@@ -92,27 +90,12 @@ button:hover {
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left>widget:first-child>#workspaces {
-  margin-left: 0;
+  margin-left: 3px;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
 .modules-right>widget:last-child>#workspaces {
   margin-right: 0;
-}
-
-#clock {
-  background-color: #64727D;
-}
-
-#battery {
-  background-color: #ffffff;
-  color: #000000;
-}
-
-#battery.charging,
-#battery.plugged {
-  color: #ffffff;
-  background-color: #26A65B;
 }
 
 @keyframes blink {
@@ -136,37 +119,6 @@ label:focus {
   background-color: #000000;
 }
 
-#backlight {
-  background-color: #90b1b1;
-}
-
-#network {
-  background-color: #2980b9;
-}
-
-#network.disconnected {
-  background-color: #f53c3c;
-}
-
-#pulseaudio {
-  background-color: #f1c40f;
-  color: #000000;
-}
-
-#pulseaudio.muted {
-  background-color: #90b1b1;
-  color: #2a5c45;
-}
-
-#wireplumber {
-  background-color: #fff0f5;
-  color: #000000;
-}
-
-#wireplumber.muted {
-  background-color: #f53c3c;
-}
-
 #tray {
   background-color: #2980b9;
 }
@@ -178,26 +130,6 @@ label:focus {
 #tray>.needs-attention {
   -gtk-icon-effect: highlight;
   background-color: #eb4d4b;
-}
-
-#idle_inhibitor {
-  background-color: #2d3436;
-}
-
-#idle_inhibitor.activated {
-  background-color: #ecf0f1;
-  color: #2d3436;
-}
-
-#language {
-  background: #00b093;
-  color: #740864;
-  padding: 0 5px;
-  min-width: 16px;
-}
-
-#scratchpad {
-  background: rgba(0, 0, 0, 0.2);
 }
 
 #scratchpad.empty {
