--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   /* `otf-font-awesome` is required to be installed for icons */
   font-family: FontAwesome, Iosevka, Roboto, Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 12px;
 }
 
 window#waybar {
@@ -46,8 +46,8 @@ button:hover {
 }
 
 #workspaces button {
-  padding: 0 5px;
-  margin: 5px 2px;
+  margin: 0px 5px 0px 0px;
+  padding: 5px 5px;
   border-radius: 6px;
   background-color: transparent;
   color: #ffffff;
@@ -77,10 +77,15 @@ button:hover {
 #language,
 #scratchpad {
   padding: 5px 10px;
-  margin: 5px 3px;
+  margin: 0px 8px 0px 0px;
   background: rgba(255, 255, 255, 0.7);
   color: #3f3f3f;
   border-radius: 6px;
+}
+
+
+#tray {
+  margin: 0px 0px;
 }
 
 #window,
